--- a/css/azul-advnt.css
+++ b/css/azul-advnt.css
@@ -16,14 +16,14 @@
     Styling
 ====================================== */
 ::-webkit-scrollbar {
-  background-color: linear-gradient(to right, #122562 2%, #11235c 82%);
+  background-color: #364f6b;
 }
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(to right, #122562 2%, #11235c 82%);
+  background: #364f6b;
 }
 a:hover,
 a:active {
-  color: linear-gradient(to right, #122562 2%, #11235c 82%);
+  color: #364f6b;
 }
 .gradient-bg1,
 .team-progress .progress-bar,
@@ -32,17 +32,17 @@ a:active {
 .overlay-two:before,
 .price-two.hvr-gradient:hover,
 .loader {
-  background: linear-gradient(to right, #122562 2%, #11235c 82%);
-  background: -moz-linear-gradient(left, #122562 2%, #11235c 82%);
-  background: -webkit-linear-gradient(left, #122562 2%, #11235c 82%);
-  background: linear-gradient(to right, #122562 2%, #11235c 82%);
+  background: #364f6b;
+  background: -moz-linear-gradient(left, #364f6b 2%, #364f6b 82%);
+  background: -webkit-linear-gradient(left, #364f6b 2%, #364f6b 82%);
+  background: linear-gradient(to right, #364f6b 2%, #364f6b 82%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@colorPrimary', endColorstr='@colorSecondary', GradientType=1);
 }
 .header-appear .navbar-top-default.navbar-gradient {
-  background: #0f4c81;
-  background: -moz-linear-gradient(left, #122562 2%, #11235c 82%);
-  background: -webkit-linear-gradient(left, #122562 2%, #11235c 82%);
-  background: linear-gradient(to right, #122562 2%, #11235c 82%);
+  background: #364f6b;
+  background: -moz-linear-gradient(left, #364f6b 2%, #364f6b 82%);
+  background: -webkit-linear-gradient(left, #364f6b 2%, #364f6b 82%);
+  background: linear-gradient(to right, #364f6b 2%, #364f6b 82%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@colorPrimary', endColorstr='@colorPrimary', GradientType=1);
 }
 /* text-color */
@@ -58,15 +58,15 @@ a:active {
 .navbar.navbar-right .navbar-nav .nav-link.active,
 .button-play:hover i,
 .parallax-box:hover i {
-  color: #122562;
+  color: #364f6b;
 }
 .gradient-text1,
 .cube-portfolio1 .cbp-l-filters-button .cbp-filter-item.cbp-filter-item-active,
 .blog-item-content h4 a:hover {
-  background: #122562;
-  background: -moz-linear-gradient(left, #122562 2%, #11235c 82%);
-  background: -webkit-linear-gradient(left, #122562 2%, #11235c 82%);
-  background: linear-gradient(to right, #122562 2%, #11235c 82%);
+  background: #364f6b;
+  background: -moz-linear-gradient(left, #364f6b 2%, #364f6b 82%);
+  background: -webkit-linear-gradient(left, #364f6b 2%, #364f6b 82%);
+  background: linear-gradient(to right, #364f6b 2%, #364f6b 82%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@colorPrimary', endColorstr='@colorSecondary', GradientType=1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -75,26 +75,26 @@ a:active {
 .side-right-social a,
 .price-item .btn.btn-black:hover,
 .price-item .btn.btn-black:focus {
-  background: #122562;
-  border-color: #122562;
+  background: #364f6b;
+  border-color: #364f6b;
 }
 .btn.btn-blue:hover,
 .btn.btn-blue:focus {
   background: transparent !important;
-  border-color: #122562;
-  color: #122562 !important;
+  border-color: #364f6b;
+  color: #364f6b !important;
 }
 .btn.btn-gradient,
 .team-box-two .team-two-block::before,
 .scroll-top-arrow,
 .widget .search-btn {
-  background-image: linear-gradient(to right, #122562 0%, #11235c 51%, #11235c 100%);
+  background-image: linear-gradient(to right, ##364f6b 0%, #364f6b 51%, #364f6b 100%);
 }
 .header-appear .nav-box-round .navbar-nav .nav-link.active,
 .owl-dots .owl-dot::after,
 .footer-social li a:hover {
   background-color: #f8f8ff;
-  color:#122562 !important;
+  color:#364f6b !important;
 }
 .nav-line .navbar-nav .nav-link:before,
 .button-play,
@@ -105,18 +105,18 @@ a:active {
 .blog-pagination li.active a,
 .blog-pagination li a:focus,
 .wexim .tp-bullet.selected .tp-bullet-inner {
-  background: #122562;
+  background: #364f6b;
 }
 .count-down-form .form-control:focus {
-  border-bottom: 2px solid #122562 !important;
+  border-bottom: 2px solid #364f6b !important;
 }
 .blog-tags li a:hover,
 .blog-tags li a:focus {
-  border: 1px solid #122562;
-  background-color: #122562;
+  border: 1px solid #364f6b;
+  background-color: #364f6b;
 }
 .price-item .btn.btn-black:hover,
 .price-item .btn.btn-black:focus {
-  background: #122562 !important;
-  border-color: #122562;
+  background: #364f6b !important;
+  border-color: ;
 }
