--- a/css/style.css
+++ b/css/style.css
@@ -1914,6 +1914,8 @@ ul.packages li {
 .liStrategy{
     list-style-type: disc;
     margin: 10px;
+    display: flex;
+	flex-direction: column;
 }
 ul.packages li i {
     display: inline-block;
@@ -2511,6 +2513,7 @@ ul.packages li i.fa-times{
 
 .blog-text{
     max-width: 100%;
+    align-text: left;
 }
 
 .blog-text h2{
